arrow alignment fix

--- a/css/index.css
+++ b/css/index.css
@@ -522,6 +522,7 @@ html {
   justify-content: center;
   justify-content: space-evenly;
   padding: 2% 22% 0 0;
+  margin: 0 2% 0 0;
 }
 @media (min-width: 801px) {
   .arrows {
