--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -249,6 +249,7 @@ html {
     justify-content: center;
     justify-content: space-evenly;
     padding: 2% 22% 0 0;
+    margin: 0 2% 0 0;
     @media @desktop{
         margin: 0 6% 0 0;
     }
